examples/type_system/failing/29_strict_missing_main.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn inc(x: Int) -> Int {
    x + 1
}
